--- a/_config.yml
+++ b/_config.yml
@@ -12,15 +12,15 @@ github_repo: "https://github.com/happyblank/happyblank.github.io.git" # you code
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-zhihu_username:     刘腾远
+zhihu_username:     liu-teng-yuan
 github_username:    happyblank
-#twitter_username:   qiubaiying
+#twitter_username:   happyblank
 
 
 
