--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: 刘腾远的博客 | BY Blog
+title: LTY Blog
+SEOTitle: 刘腾远的博客 | LTY Blog
 header-img: img/post-bg-desk.jpg
 email: liutengyuan@outlook.com
 description: "Every failure is leading towards success."
@@ -20,7 +20,7 @@ sidebar-avatar: /img/      # use absolute URL, seeing it's used in both `/` and 
 RSS: false
 zhihu_username:     liu-teng-yuan
 github_username:    happyblank
-#twitter_username:   happyblank
+twitter_username:   happyblank
 
 
 
