--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: LTY Blog
+title: 刘腾远的博客
 SEOTitle: 刘腾远的博客 | LTY Blog
 header-img: img/post-bg-desk.jpg
 email: liutengyuan@outlook.com
