--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 刘腾远的博客
 SEOTitle: 刘腾远的博客 | LTY Blog
 header-img: img/post-bg-desk.jpg
 email: liutengyuan@outlook.com
-description: "Every failure is leading towards success."
+description: "我的点滴日常"
 keyword: "刘腾远"
 url: "http://happyblank.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ github_repo: "https://github.com/happyblank/happyblank.github.io.git" # you code
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "Just Do It!"
 sidebar-avatar: /img/      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
